--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body {
   width: 45%;
   display: flex;
   flex-direction: row;
-  margin-bottom: 150px;
+  margin-bottom: 200px;
 }
 
 .title-principal {
@@ -138,24 +138,25 @@ body {
   font-family: "Poiret One";
   font-size: 7rem;
   color: #445576;
-  margin: 30px 0;
+  margin: 0 0 30px 0;
 }
 
 .title-principal p,
-.section-text ul {
+.section-text ul,
+.section-text p {
   font-family: "Montserrat";
   font-size: 1.4rem;
   color: #2b2b2b;
   text-transform: none;
-  margin-bottom: 50px;
+  margin-bottom: 45px;
   font-weight: 400;
   line-height: 28px;
 }
 
-.section-text {
-  text-align: right;
-  margin: 50px 0;
-}
+/* .section-text {
+  margin: 40px;
+  margin-bottom: 0px;
+} */
 
 .section-text li {
   list-style-type: none;
@@ -174,7 +175,6 @@ body {
   color: #272727;
   letter-spacing: 1rem;
   /* text-transform: uppercase; */
-  margin: 1rem 0.4rem;
   font-family: "Poiret One";
 }
 
@@ -184,16 +184,24 @@ body {
 
 .section {
   padding: 0 10rem;
-  margin-bottom: 150px;
 }
 
 .call-to-action {
   margin-top: 1rem;
 }
 
-#section1 {
+#section1,
+#section2,
+#section3 {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 60px;
+}
+
+#section2 .section-text {
+  flex-grow: 1;
 }
 
 /* Images */
@@ -208,44 +216,112 @@ body {
 .skier img {
   width: 100%;
   height: 100%;
-  box-shadow: rgba(0, 0, 0, 0.4);
+  /* box-shadow: rgba(0, 0, 0, 0.4); */
 }
 
-#section1 .skier-boy img {
-  width: 103%;
-  margin-top: 30px;
+.skier-boy img,
+.skier-kids img,
+.kids img {
+  width: 70rem;
 }
 
-#section2 .skier-kids img {
-  width: 70%;
-  margin-top: 30px;
+#section4 h1 {
+  margin-top: 50px;
 }
 
-/* .sponsors__heading--main {
-  color: #ffff;
-  font-size: 4.8rem;
+/* Contact-form */
+
+button,
+input,
+select,
+textarea,
+.pure-g [class*="pure-u"] {
+  font-family: "Karla", "Arial", sans-serif;
+}
+
+.hidden {
+  display: none;
+}
+
+#form {
+  padding: 30px;
+  background-color: #fff;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+#form h1 {
+  font-weight: normal;
+  color: #444;
+  font-size: 64px;
+  text-align: center;
+}
+
+.form-wrapper .field-list {
+  line-height: normal;
+}
+.form-wrapper .field-list .field {
+  position: relative;
+  margin: 0 0 24px;
+}
+.form-wrapper .field-list .fields {
+  margin: 0 0 0 -2%;
+}
+.form-wrapper .field-list .fields .label,
+.form-wrapper .field-list .fields .description,
+.form-wrapper .field-list .fields .field,
+.form-wrapper .field-list .fields .field-error {
+  margin-left: 2%;
+}
+.form-wrapper .field-list .fields .field {
+  float: left;
+}
+.form-wrapper .field-list .fields.name .field {
+  width: 48%;
+}
+.form-wrapper .field-list .field .field-element {
+  width: 100%;
+  padding: 12px;
+  margin: 6px 0 4px;
+  border: 1px solid #ccc;
+  background: #fafafa;
+  font-family: sans-serif;
+  font-size: 12px;
+  line-height: normal;
+  box-sizing: border-box;
+  border-radius: 2px;
+}
+.form-wrapper .field-list .field .caption {
+  font-size: 12px;
+}
+fieldset {
+  border: none;
+}
+.form-wrapper .field-list legend {
+  display: none;
+}
+input:focus {
+  background-color: #fff !important;
+  cursor: auto;
+}
+.form-button-wrapper {
+  text-align: center;
+}
+.form-button-wrapper input.button {
+  background-color: #202020;
+  color: #fff;
   text-transform: uppercase;
-  opacity: 0.03;
-  font-family: "Montsserat", sans-serif;
-  font-weight: 900;
-  position: absolute;
-  bottom: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  font-size: 20px;
+  letter-spacing: 2px;
+  border: none;
+  padding: 1em 2.5em;
+  transition: all 0.2s ease;
+  border-radius: 2px;
 }
-
-.sponsors__heading--hidden {
-  color: #ffff;
-  position: absolute;
-  font-family: "Poppins", sans-serif;
-  font-size: 1.8rem;
-  letter-spacing: 1rem;
-  left: 50%;
-  bottom: 14%;
-  transform: translate(-50%, -50%);
-  text-transform: uppercase;
+.form-button-wrapper input.button:hover {
+  cursor: pointer;
 }
-
-.sponsors__logos {
-  display: flex;
-} */
+.form-button-wrapper input.button:focus {
+  background-color: #202020 !important;
+  opacity: 0.85;
+}
