--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ html {
 *,
 *:before,
 *::after {
-  color: black;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -19,17 +18,9 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   overflow: auto;
-  background: linear-gradient(
-      to top,
-      rgb(255, 255, 255) 25%,
-      rgba(255, 255, 255, 0.4) 100%
-    ),
-    url();
   position: relative;
   max-width: 100%;
   height: 100vh;
-  background-position: center;
-  background-size: cover;
 }
 
 .container {
@@ -88,7 +79,7 @@ body {
   font-family: "Montserrat", sans-serif;
   color: #ffff;
   padding: 1.5rem 3rem;
-  background-color: #5879d5;
+  background-color: #4266af;
   border-radius: 20px;
   border: none;
   transition: transform 0.3s ease;
@@ -96,7 +87,7 @@ body {
 }
 
 .btn-action:hover {
-  background-color: #2d3f72;
+  background-color: #2f4297;
   transform: scale(1.2);
 }
 
@@ -174,7 +165,6 @@ body {
   font-weight: 900;
   color: #272727;
   letter-spacing: 1rem;
-  /* text-transform: uppercase; */
   font-family: "Poiret One";
 }
 
@@ -227,101 +217,114 @@ body {
 
 #section4 h1 {
   margin-top: 50px;
-}
-
-/* Contact-form */
-
-button,
-input,
-select,
-textarea,
-.pure-g [class*="pure-u"] {
-  font-family: "Karla", "Arial", sans-serif;
-}
-
-.hidden {
-  display: none;
-}
-
-#form {
-  padding: 30px;
-  background-color: #fff;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-#form h1 {
-  font-weight: normal;
-  color: #444;
-  font-size: 64px;
   text-align: center;
 }
 
-.form-wrapper .field-list {
-  line-height: normal;
+#section4 {
+  font-weight: 300;
+  font-size: 1.8rem;
 }
-.form-wrapper .field-list .field {
-  position: relative;
-  margin: 0 0 24px;
+
+/* Contact form */
+
+.contact-form {
+  text-align: center;
+  margin: 50px auto;
+  max-width: 400px;
+  padding: 20px;
+  background-color: #f1f5fe;
+  border-radius: 5px;
 }
-.form-wrapper .field-list .fields {
-  margin: 0 0 0 -2%;
+
+/* Style for form labels */
+.label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: 300;
 }
-.form-wrapper .field-list .fields .label,
-.form-wrapper .field-list .fields .description,
-.form-wrapper .field-list .fields .field,
-.form-wrapper .field-list .fields .field-error {
-  margin-left: 2%;
-}
-.form-wrapper .field-list .fields .field {
-  float: left;
-}
-.form-wrapper .field-list .fields.name .field {
-  width: 48%;
-}
-.form-wrapper .field-list .field .field-element {
+
+/* Style for form inputs and textarea */
+.input {
   width: 100%;
-  padding: 12px;
-  margin: 6px 0 4px;
+  padding: 10px;
+  margin-bottom: 15px;
   border: 1px solid #ccc;
-  background: #fafafa;
-  font-family: sans-serif;
-  font-size: 12px;
-  line-height: normal;
-  box-sizing: border-box;
-  border-radius: 2px;
+  border-radius: 4px;
 }
-.form-wrapper .field-list .field .caption {
-  font-size: 12px;
+
+.message-input {
+  width: 100%;
+  padding: 50px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
-fieldset {
-  border: none;
+
+/* Footer */
+
+.footer {
+  padding: 150px 0px 150px 0;
+  font-weight: 300;
+  background-image: url("/images/Footer.jpg"); /* Replace with your image file name */
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  font-weight: 500;
 }
-.form-wrapper .field-list legend {
-  display: none;
+
+.footer-text {
+  margin-top: 90px;
 }
-input:focus {
-  background-color: #fff !important;
-  cursor: auto;
-}
-.form-button-wrapper {
+
+.footer .row {
+  padding: 10px 0;
+  color: rgb(255, 255, 255);
+  font-size: 0.8em;
   text-align: center;
 }
-.form-button-wrapper input.button {
-  background-color: #202020;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 20px;
-  letter-spacing: 2px;
-  border: none;
-  padding: 1em 2.5em;
-  transition: all 0.2s ease;
-  border-radius: 2px;
+
+.footer .row a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  transition: 0.5s;
+  font-weight: 500;
 }
-.form-button-wrapper input.button:hover {
-  cursor: pointer;
+
+.footer .row a:hover {
+  color: #ffffff;
+  text-decoration: underline;
 }
-.form-button-wrapper input.button:focus {
-  background-color: #202020 !important;
-  opacity: 0.85;
+
+.footer .row ul {
+  width: 100%;
+  font-weight: 500;
+}
+
+.footer .row ul li {
+  display: inline-block;
+  margin: 0px 30px;
+}
+
+.footer .row a i {
+  font-size: 1.5em;
+  margin: 0% 1%;
+}
+
+.icon-container i.fa {
+  color: white;
+}
+
+@media (max-width: 720px) {
+  .footer {
+    text-align: left;
+    padding: 5%;
+  }
+  .footer .row ul li {
+    display: block;
+    margin: 10px 0px;
+    text-align: left;
+  }
+  .footer .row a i {
+    margin: 0% 3%;
+  }
 }
