Update snow.js and fic message-input height

--- a/style.css
+++ b/style.css
@@ -254,7 +254,8 @@ body {
 
 .message-input {
   width: 100%;
-  padding: 50px;
+  padding: 10px 0;
+  height: 100px;
   margin-bottom: 15px;
   border: 1px solid #ccc;
   border-radius: 4px;
