--- a/style.css
+++ b/style.css
@@ -144,11 +144,6 @@ body {
   line-height: 28px;
 }
 
-/* .section-text {
-  margin: 40px;
-  margin-bottom: 0px;
-} */
-
 .section-text li {
   list-style-type: none;
   line-height: 40px;
@@ -206,7 +201,6 @@ body {
 .skier img {
   width: 100%;
   height: 100%;
-  /* box-shadow: rgba(0, 0, 0, 0.4); */
 }
 
 .skier-boy img,
@@ -266,7 +260,7 @@ body {
 .footer {
   padding: 150px 0px 150px 0;
   font-weight: 300;
-  background-image: url("images/Footer.jpg"); /* Replace with your image file name */
+  background-image: url("images/footer.jpg"); /* Replace with your image file name */
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
