--- a/style.css
+++ b/style.css
@@ -260,8 +260,9 @@ body {
 .footer {
   padding: 150px 0px 150px 0;
   font-weight: 300;
-  background-image: url("images/footer.jpg");
+  background-image: url("../images/footer.jpg");
   background-size: cover;
+  background-position: center top;
   background-repeat: no-repeat;
   color: white;
   font-weight: 500;
