Convert to relative path

--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body {
 .footer {
   padding: 150px 0px 150px 0;
   font-weight: 300;
-  background-image: url("https://images.unsplash.com/photo-1585409677983-0f6c41ca9c3b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D&w=1000&q=80");
+  background-image: url("../images/footer.jpg");
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
