--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ body {
 .footer {
   padding: 150px 0px 150px 0;
   font-weight: 300;
-  background-image: url("../images/footer.jpg");
+  background-image: url("../images/Footer.jpg");
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
