--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ body {
 
 /* Contact form */
 
-.contact-form {
+#contact-form {
   text-align: center;
   margin: 50px auto;
   max-width: 400px;
@@ -230,11 +230,16 @@ body {
   border-radius: 5px;
 }
 
+#success-message {
+  text-align: center;
+}
+
 /* Style for form labels */
 .label {
   display: block;
   margin-bottom: 5px;
-  font-weight: 300;
+  font-weight: 400;
+  font-size: 1.5rem;
 }
 
 /* Style for form inputs and textarea */
