--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body {
 .navbar-list {
   list-style: none;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   max-width: 100%;
   align-items: center;
   z-index: 10;
@@ -100,15 +100,6 @@ body {
     top: -2rem;
   }
 }
-
-/* header {
-  position: relative;
-  max-width: 100%;
-  height: 100vh;
-  background-position: center;
-  background-size: cover;
-  z-index: -1;
-} */
 
 .title {
   margin-top: 12rem;
@@ -376,6 +367,7 @@ body {
 
   .skier {
     top: 15rem;
+    z-index: -1;
   }
 
   .title-principal h1,
