--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ nav {
 
 .section-text ul li {
   /* list-style-type: none; */
-  line-height: 37px;
+  line-height: 40px;
   text-align: left;
 }
 
@@ -229,7 +229,7 @@ nav {
 }
 
 #section4 h1 {
-  margin-top: 50px;
+  margin: 50px 0 80px 0;
   text-align: center;
 }
 
@@ -353,6 +353,16 @@ nav {
     flex-direction: column;
     cursor: pointer;
     padding: 10px;
+  }
+
+  .skier-boy img,
+  .skier-kids img,
+  .kids img {
+    margin-top: 100px;
+  }
+
+  .section-text h1 {
+    margin-top: 100px;
   }
 }
 
